cluster/apps/networking/static-routes/unifi/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: unifi
  namespace: networking
spec:
  type: ExternalName
  ports:
    - name: https
      port: 443
  externalName: 10.1.0.1
